[tool.poetry]
name = "rosys"
version = "0.0.0"
description = "Modular Robot System With Elegant Automation Capabilities"
authors = ["Zauberzeug GmbH <info@zauberzeug.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zauberzeug/rosys"
keywords = ["robot", "framework", "automation", "control", "steer"]

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
nicegui = "^3.4.0" # https://github.com/zauberzeug/rosys/security/dependabot/79
pyserial = "^3.5"
numpy = "<3.0.0"
scipy = "^1.7.2"
opencv-contrib-python = ">= 4.12.0.88, <4.13.0.0"
psutil = "^5.9.0"
networkx = "^2.6.2"
tabulate = "^0.8.9"
coloredlogs = "^15.0.1"
humanize = "^4.0.0"
uvloop = ">=0.17.0"
dataclasses-json = "^0.5.7"
suntime = "^1.2.5"
line-profiler = "^4.1.3"
yappi = "^1.6.0"
pyloot = "^0.1.0"
objgraph = "^3.6.1"
imgsize = "^2.1"
ifaddr = "^0.2.0"
httpx = ">=0.25.0"
matplotlib = "^3.7.2"
pyudev = ">=0.21.0"
pyquaternion = "^0.9.9"
cairosvg = "^2.7.0"
pillow = ">=11.3.0" # https://github.com/zauberzeug/rosys/security/dependabot/68
idna = ">=3.7" # https://github.com/zauberzeug/rosys/security/dependabot/45
uvicorn = "!=0.29.0" # test_examples.py fails with 0.29.0 due to persistency not correctly writing during teardown
requests = ">=2.32.4" # https://github.com/zauberzeug/rosys/security/dependabot/64
urllib3 = ">=2.6.0" # https://github.com/zauberzeug/rosys/security/dependabot/76
starlette = ">=0.49.1" # https://github.com/zauberzeug/rosys/security/dependabot/73
aiohttp = ">=3.13.3" # https://github.com/zauberzeug/rosys/security/dependabot/89
fonttools = "^4.60.2" # https://github.com/zauberzeug/rosys/security/dependabot/74
marshmallow = "^3.26.2" # https://github.com/zauberzeug/rosys/security/dependabot/81
pyturbojpeg = "^1.8.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.5.5"
pytest = "^8.2.2"
pytest-watch = "^4.2.0"
pytest-flakefinder = "^1.0.0"
pytest-profiling = "^1.7.0"
pytest-asyncio = "^1.2.0"
debugpy = "^1.2.1"
py-spy = "^0.3.10"
cryptography = ">=44.0.1" # https://github.com/zauberzeug/rosys/security/dependabot/61
sh = "^1.14.2"
mypy = {version = ">=1.15.0, <2.0.0", extras = ["faster-cache"]}
pylint = "^3.2.5"
pre-commit = "^4.0.1"
filelock = "^3.20.1" # https://github.com/zauberzeug/rosys/security/dependabot/80
poetry-dynamic-versioning = "^1.8.0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.mypy]
python_version = "3.11"
install_types = true
check_untyped_defs = true

# pyproject.toml
[[tool.mypy.overrides]]
module = ["numpy.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "cairosvg",
    "coloredlogs",
    "imgsize",
    "networkx",
    "objgraph",
    "pylab",
    "pyloot.*",
    "pyquaternion",
    "pyudev",
    "scipy.*",
    "serial.*",
    "socketio.*",
    "suntime",
    "yappi",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# NOTE: changing default location of pytest_cache because the uvicorn file watcher somehow triggered too many reloads
cache_dir = "../.pytest_cache"
testpaths = [
    "tests"
]

[tool.poetry.plugins.pytest11]
rosys = "rosys.testing.fixtures"

[tool.pylint]
disable = [
    "C0103", # Invalid name (e.g., variable/function/class naming conventions)
    "C0111", # Missing docstring (in function/class/method)
    "C0301", # Line too long (exceeds character limit)
    "R0801", # Similar lines in %s files
    "R0902", # Too many public methods
    "R0903", # Too few public methods
    "R0904", # Too many public methods
    "R0912", # Too many branches
    "R0913", # Too many arguments
    "R0914", # Too many local variables
    "R0915", # Too many statements
    "R0917", # Too many positional arguments
    "R1702", # Too many nested blocks
    "R1705", # Unnecessary "else" after "return"
    "R1724", # Unnecessary "else" after "continue"
    "W0102", # Dangerous default value as argument
    "W0511", # TODO
    "W0718", # Catching too general exception
    "W1514", # Using open without explicitly specifying an encoding
]
extension-pkg-allow-list = "cv2,scipy.spatial"

[tool.pylint.TYPECHECK]
generated-members = "cv2.*,scipy.spatial.*,sh.*"

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "I",  # isort
    "E",  # pycodestyle
    "W",  # pycodestyle
    "B",  # bugbear
    "F",  # pyflakes
    "UP", # pyupgrade
    "RUF", # ruff
    "PL", # pylint
    "NPY201", # NumPy 2.0
]
fixable = [
    "I",  # isort
    "RUF022", # `__all__` is not sorted
]
ignore = [
    "B024", # abstract class without abstract method
    "E501", # line too long
    "E741", # ambiguous variable name
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
]
