<?xml version="1.0"?>
<package>
  <name>robot</name>
  <version>0.0.0</version>
  <description>The robot package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>

  <license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
